--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dfmeaf</title>
-    <link rel="stylesheet" href="about2.css">
-    <link rel="icon" type="image/x-icon" href="resources/images/logo.png">
+    <link rel="stylesheet" href="./about2.css">
+    <link rel="icon" type="image/x-icon" href="./resources/images/logo.png">
 
 </head>
 <body>
