rename and relink

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
-    <link rel="stylesheet" href="./about2.css">
+    <link rel="stylesheet" href="./index.css">
     <link rel="icon" type="image/x-icon" href="./resources/images/logo.png">
 </head>
 <body>
@@ -21,7 +21,7 @@
         </div>
 
         <div class="nav-item active">
-            <a href="about2.html">about/contact</a>
+            <a href="about.html">about/contact</a>
         </div>
         
     </div>
@@ -89,7 +89,7 @@
             </div>
     
             <div class="active">
-                <a href="about2.html">about/contact</a>
+                <a href="about.html">about/contact</a>
             </div>
         </div>
 
