--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dfmeaf</title>
-    <link rel="stylesheet" href="./about2.css">
+    <link rel="stylesheet" href="./index.css">
     <link rel="icon" type="image/x-icon" href="./resources/images/logo.png">
 
 </head>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="nav-item inactive">
-            <a href="about2.html">about/contact</a>
+            <a href="about.html">about/contact</a>
         </div>
         
     </div>
@@ -345,7 +345,7 @@
             </div>
     
             <div class="inactive">
-                <a href="about2.html">about/contact</a>
+                <a href="about.html">about/contact</a>
             </div>
         </div>
 
