--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="nav-item inactive">
-            <a href="History of no consequence.html">HNOC (2022)</a>             
+            <a href="History_of_no_consequence.html">HNOC (2022)</a>             
         </div>
 
         <div class="nav-item active">
@@ -100,7 +100,7 @@
             </div>
     
             <div class="nav-item inactive">
-                <a href="History of no consequence.html">HNOC (2022)</a>             
+                <a href="History_of_no_consequence.html">HNOC (2022)</a>             
             </div>
     
             <div class="active">
